<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/icon73"
            android:title="@string/menu_dashboard" />
        <item
            android:id="@+id/nav_mytrips"
            android:icon="@drawable/icon72"
            android:title="@string/menu_mytrips" />
        <item
            android:id="@+id/nav_mywallet"
            android:icon="@drawable/icon71"
            android:title="@string/menu_mywallet" />
        <item
            android:id="@+id/nav_chats"
            android:icon="@drawable/icon70"
            android:title="@string/menu_chats"
            app:actionLayout="@layout/menu_counter"
            />
        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/icon69"
            android:title="@string/menu_notifications"
            app:actionLayout="@layout/menu_counter"
            />

    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_editprofile"
            android:icon="@drawable/icon68"
            android:title="@string/menu_editprofile" />
        <item
            android:id="@+id/nav_changepassword"
            android:icon="@drawable/icon67"
            android:title="@string/menu_changepassword" />
        <item
            android:id="@+id/nav_contactus"
            android:icon="@drawable/icon66"
            android:title="@string/menu_contactus" />
        <item
            android:id="@+id/nav_aboutus"
            android:icon="@drawable/icon65"
            android:title="@string/menu_aboutus" />
        <item
            android:id="@+id/nav_termsandcondition"
            android:icon="@drawable/icon64"
            android:title="@string/menu_termsandcondition" />
        <item
            android:id="@+id/nav_pp_cp"
            android:icon="@drawable/icon64"
            android:title="@string/menu_pp_cp" />
    </group>
    <item android:title="" >
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_logout"
                    android:icon="@drawable/icon63"
                    android:title="@string/menu_logout" />
            </group>
        </menu>
    </item>
</menu>