<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_dashboard">

    <fragment
        android:id="@+id/nav_dashboard"
        android:name="com.example.goluggdemo.ui.dashboard.DashboardFragment"
        android:label="@string/menu_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/nav_mytrips"
        android:name="com.example.goluggdemo.ui.mytrips.MyTripsFragment"
        android:label="@string/menu_mytrips"
        tools:layout="@layout/fragment_mytrips" />

    <fragment
        android:id="@+id/nav_mywallet"
        android:name="com.example.goluggdemo.ui.mywallet.MyWalletFragment"
        android:label="@string/menu_mywallet"
        tools:layout="@layout/fragment_mywallet" />
    <fragment
        android:id="@+id/nav_editprofile"
        android:name="com.example.goluggdemo.ui.editprofile.EditProfileFragment"
        android:label="Edit Profile"
        tools:layout="@layout/fragment_editprofile"
        />


</navigation>