<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_centerInParent="true"
    android:background="@drawable/icon60"
    android:gravity="center|center_vertical"
    android:orientation="horizontal"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/ivcross"
        android:layout_width="10dp"
        android:layout_height="10dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_marginEnd="10dp"
        app:srcCompat="@drawable/icon61" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:gravity="center|center_vertical">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circularImageView"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:paddingTop="@dimen/nav_header_vertical_spacing"
            android:src="@drawable/icon62" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/circularImageView"
            android:gravity="center|center_vertical"
            android:orientation="vertical"
            android:textAlignment="center">

            <TextView
                android:id="@+id/tvName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:paddingTop="@dimen/nav_header_vertical_spacing"
                android:text="@string/nav_header_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textSize="24sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:textAlignment="center">

                <ImageView
                    android:id="@+id/imageView"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    app:srcCompat="@drawable/icon54" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:gravity="center|center_vertical"
                    android:text="@string/nav_header_subtitle1"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="2dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/nav_header_subtitle2"
                    android:textSize="16sp" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>